@@ -1,3 +1,15 @@
+2009-12-29  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
+
+        Reviewed by Holger Freyther.
+
+        [GTK] fails fast/harness/use-page-cache.html
+        https://bugs.webkit.org/show_bug.cgi?id=33013
+
+        Make sure settings are forwarded to child WebViews.
+
+        * DumpRenderTree/gtk/DumpRenderTree.cpp:
+        (createWebView):
+
 2009-12-29  Daniel Bates  <dbates@webkit.org>
 
         Reviewed by Eric Seidel.
